[gd_scene load_steps=7 format=3 uid="uid://b7qgu2kiig78y"]

[ext_resource type="Script" path="res://Level1.gd" id="1_j48u4"]
[ext_resource type="TileSet" uid="uid://bfjs8th7trsrt" path="res://assets/tileset.tres" id="1_rri5o"]
[ext_resource type="Script" path="res://map.gd" id="3_yb5u2"]
[ext_resource type="PackedScene" uid="uid://c8ltqykgllcdc" path="res://boat.tscn" id="4_u5uiw"]
[ext_resource type="PackedScene" uid="uid://fxg0kfwxkvv" path="res://UISide.tscn" id="5_beqyk"]
[ext_resource type="PackedScene" uid="uid://bw1ce38kg37ep" path="res://LevelCompleted.tscn" id="6_k20oc"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_j48u4")

[node name="MapViewContainer" type="SubViewportContainer" parent="."]
offset_right = 960.0
offset_bottom = 648.0
stretch = true

[node name="MapView" type="SubViewport" parent="MapViewContainer"]
handle_input_locally = false
size = Vector2i(960, 648)
render_target_update_mode = 4

[node name="TileMap" type="TileMap" parent="MapViewContainer/MapView"]
texture_filter = 1
tile_set = ExtResource("1_rri5o")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 65536, 4, 65536, 65536, 4, 131072, 65536, 4, 196608, 65536, 4, 262144, 65536, 4, 327680, 65536, 4, 393216, 65536, 4, 458752, 65536, 4, 524288, 65536, 4, 589824, 65536, 4, 655360, 65536, 4, 720896, 65536, 4, 786432, 65536, 4, 851968, 65536, 4, 917504, 65536, 4, 1, 65536, 4, 65537, 65536, 4, 131073, 65536, 4, 196609, 65536, 4, 262145, 65536, 4, 327681, 65536, 4, 393217, 65536, 4, 458753, 65536, 4, 524289, 65536, 4, 589825, 65536, 4, 655361, 65536, 4, 720897, 65536, 4, 786433, 65536, 4, 851969, 65536, 4, 917505, 65536, 4, 2, 65536, 4, 65538, 65536, 4, 131074, 65536, 4, 196610, 65536, 4, 262146, 65536, 4, 327682, 65536, 4, 393218, 65536, 4, 458754, 65536, 4, 524290, 65536, 4, 589826, 65536, 4, 655362, 65536, 4, 720898, 65536, 4, 786434, 65536, 4, 851970, 65536, 4, 917506, 65536, 4, 3, 65536, 4, 65539, 65536, 4, 131075, 65536, 4, 196611, 65536, 4, 262147, 65536, 4, 327683, 65536, 4, 393219, 65536, 4, 458755, 65536, 4, 524291, 65536, 4, 589827, 65536, 4, 655363, 65536, 4, 720899, 65536, 4, 786435, 65536, 4, 851971, 65536, 4, 917507, 65536, 4, 4, 65536, 4, 65540, 65536, 4, 131076, 65536, 4, 196612, 65536, 4, 262148, 65536, 4, 327684, 65536, 4, 393220, 65536, 4, 458756, 65536, 4, 524292, 65536, 4, 589828, 65536, 4, 655364, 65536, 4, 720900, 65536, 4, 786436, 65536, 4, 851972, 65536, 4, 917508, 65536, 4, 5, 131072, 4, 65541, 131072, 4, 131077, 262144, 3, 196613, 65536, 4, 262149, 65536, 4, 327685, 65536, 4, 393221, 65536, 4, 458757, 65536, 4, 524293, 65536, 4, 589829, 65536, 4, 655365, 65536, 4, 720901, 65536, 4, 786437, 65536, 4, 851973, 65536, 4, 917509, 65536, 4, 6, 196608, 2, 65542, 196608, 2, 131078, 65536, 3, 196614, 65536, 4, 262150, 65536, 4, 327686, 65536, 4, 393222, 65536, 4, 458758, 65536, 4, 524294, 65536, 4, 589830, 65536, 4, 655366, 65536, 4, 720902, 65536, 4, 786438, 65536, 4, 851974, 65536, 4, 917510, 65536, 4, 7, 196608, 2, 65543, 196608, 2, 131079, 65536, 3, 196615, 65536, 4, 262151, 65536, 4, 327687, 65536, 4, 393223, 65536, 4, 458759, 65536, 4, 524295, 65536, 4, 589831, 65536, 4, 655367, 65536, 4, 720903, 65536, 4, 786439, 65536, 4, 851975, 65536, 4, 917511, 65536, 4, 8, 0, 4, 65544, 0, 4, 131080, 196608, 3, 196616, 65536, 4, 262152, 65536, 4, 327688, 65536, 4, 393224, 65536, 4, 458760, 65536, 4, 524296, 65536, 4, 589832, 65536, 4, 655368, 65536, 4, 720904, 65536, 4, 786440, 65536, 4, 851976, 65536, 4, 917512, 65536, 4, 9, 65536, 4, 65545, 65536, 4, 131081, 65536, 4, 196617, 65536, 4, 262153, 65536, 4, 327689, 65536, 4, 393225, 65536, 4, 458761, 65536, 4, 524297, 65536, 4, 589833, 65536, 4, 655369, 65536, 4, 720905, 65536, 4, 786441, 65536, 4, 851977, 65536, 4, 917513, 65536, 4, 10, 65536, 4, 65546, 65536, 4, 131082, 65536, 4, 196618, 65536, 4, 262154, 65536, 4, 327690, 65536, 4, 393226, 65536, 4, 458762, 65536, 4, 524298, 65536, 4, 589834, 65536, 4, 655370, 65536, 4, 720906, 65536, 4, 786442, 65536, 4, 851978, 65536, 4, 917514, 65536, 4, 11, 65536, 4, 65547, 65536, 4, 131083, 65536, 4, 196619, 65536, 4, 262155, 65536, 4, 327691, 65536, 4, 393227, 65536, 4, 458763, 65536, 4, 524299, 65536, 4, 589835, 65536, 4, 655371, 65536, 4, 720907, 65536, 4, 786443, 65536, 4, 851979, 65536, 4, 917515, 65536, 4, 12, 65536, 4, 65548, 65536, 4, 131084, 65536, 4, 196620, 65536, 4, 262156, 65536, 4, 327692, 65536, 4, 393228, 65536, 4, 458764, 65536, 4, 524300, 65536, 4, 589836, 65536, 4, 655372, 65536, 4, 720908, 65536, 4, 786444, 65536, 4, 851980, 65536, 4, 917516, 65536, 4, 13, 65536, 4, 65549, 65536, 4, 131085, 65536, 4, 196621, 65536, 4, 262157, 65536, 4, 327693, 65536, 4, 393229, 65536, 4, 458765, 65536, 4, 524301, 65536, 4, 589837, 65536, 4, 655373, 65536, 4, 720909, 65536, 4, 786445, 65536, 4, 851981, 65536, 4, 917517, 65536, 4, 14, 65536, 4, 65550, 65536, 4, 131086, 65536, 4, 196622, 65536, 4, 262158, 65536, 4, 327694, 65536, 4, 393230, 65536, 4, 458766, 65536, 4, 524302, 65536, 4, 589838, 65536, 4, 655374, 65536, 4, 720910, 65536, 4, 786446, 65536, 4, 851982, 65536, 4, 917518, 65536, 4, 15, 65536, 4, 65551, 65536, 4, 131087, 65536, 4, 196623, 65536, 4, 262159, 65536, 4, 327695, 65536, 4, 393231, 65536, 4, 458767, 65536, 4, 524303, 65536, 4, 589839, 65536, 4, 655375, 65536, 4, 720911, 65536, 4, 786447, 65536, 4, 851983, 65536, 4, 917519, 65536, 4, 16, 65536, 4, 65552, 65536, 4, 131088, 65536, 4, 196624, 65536, 4, 262160, 65536, 4, 327696, 65536, 4, 393232, 65536, 4, 458768, 65536, 4, 524304, 65536, 4, 589840, 65536, 4, 655376, 65536, 4, 720912, 65536, 4, 786448, 65536, 4, 851984, 65536, 4, 917520, 65536, 4, 17, 65536, 4, 65553, 65536, 4, 131089, 65536, 4, 196625, 65536, 4, 262161, 65536, 4, 327697, 65536, 4, 393233, 65536, 4, 458769, 65536, 4, 524305, 65536, 4, 589841, 65536, 4, 655377, 65536, 4, 720913, 65536, 4, 786449, 65536, 4, 851985, 65536, 4, 917521, 65536, 4, 18, 65536, 4, 65554, 65536, 4, 131090, 65536, 4, 196626, 65536, 4, 262162, 65536, 4, 327698, 65536, 4, 393234, 65536, 4, 458770, 65536, 4, 524306, 65536, 4, 589842, 65536, 4, 655378, 65536, 4, 720914, 65536, 4, 786450, 65536, 4, 851986, 65536, 4, 917522, 65536, 4, 19, 65536, 4, 65555, 65536, 4, 131091, 65536, 4, 196627, 65536, 4, 262163, 65536, 4, 327699, 65536, 4, 393235, 65536, 4, 458771, 65536, 4, 524307, 65536, 4, 589843, 65536, 4, 655379, 65536, 4, 720915, 65536, 4, 786451, 65536, 4, 851987, 65536, 4, 917523, 65536, 4, 20, 65536, 4, 65556, 65536, 4, 131092, 65536, 4, 196628, 65536, 4, 262164, 65536, 4, 327700, 65536, 4, 393236, 65536, 4, 458772, 65536, 4, 524308, 65536, 4, 589844, 65536, 4, 655380, 65536, 4, 720916, 65536, 4, 786452, 65536, 4, 851988, 65536, 4, 917524, 65536, 4, 21, 65536, 4, 65557, 65536, 4, 131093, 65536, 4, 196629, 65536, 4, 262165, 65536, 4, 327701, 65536, 4, 393237, 65536, 4, 458773, 65536, 4, 524309, 65536, 4, 589845, 65536, 4, 655381, 65536, 4, 720917, 65536, 4, 786453, 65536, 4, 851989, 65536, 4, 917525, 65536, 4, 22, 65536, 4, 65558, 65536, 4, 131094, 65536, 4, 196630, 65536, 4, 262166, 65536, 4, 327702, 65536, 4, 393238, 65536, 4, 458774, 65536, 4, 524310, 65536, 4, 589846, 65536, 4, 655382, 65536, 4, 720918, 65536, 4, 786454, 65536, 4, 851990, 65536, 4, 917526, 65536, 4, 983040, 65536, 4, 1048576, 65536, 4, 1114112, 65536, 4, 1179648, 65536, 4, 1245184, 65536, 4, 1310720, 65536, 4, 983041, 65536, 4, 1048577, 65536, 4, 1114113, 65536, 4, 1179649, 65536, 4, 1245185, 65536, 4, 1310721, 65536, 4, 983042, 65536, 4, 1048578, 65536, 4, 1114114, 65536, 4, 1179650, 65536, 4, 1245186, 65536, 4, 1310722, 65536, 4, 983043, 65536, 4, 1048579, 65536, 4, 1114115, 65536, 4, 1179651, 65536, 4, 1245187, 65536, 4, 1310723, 65536, 4, 983044, 65536, 4, 1048580, 65536, 4, 1114116, 65536, 4, 1179652, 65536, 4, 1245188, 65536, 4, 1310724, 65536, 4, 983045, 65536, 4, 1048581, 65536, 4, 1114117, 65536, 4, 1179653, 65536, 4, 1245189, 65536, 4, 1310725, 65536, 4, 983046, 65536, 4, 1048582, 65536, 4, 1114118, 65536, 4, 1179654, 65536, 4, 1245190, 65536, 4, 1310726, 65536, 4, 983047, 65536, 4, 1048583, 65536, 4, 1114119, 65536, 4, 1179655, 65536, 4, 1245191, 65536, 4, 1310727, 65536, 4, 983048, 65536, 4, 1048584, 65536, 4, 1114120, 65536, 4, 1179656, 65536, 4, 1245192, 65536, 4, 1310728, 65536, 4, 983049, 65536, 4, 1048585, 65536, 4, 1114121, 65536, 4, 1179657, 65536, 4, 1245193, 65536, 4, 1310729, 65536, 4, 983050, 65536, 4, 1048586, 65536, 4, 1114122, 65536, 4, 1179658, 65536, 4, 1245194, 65536, 4, 1310730, 65536, 4, 983051, 65536, 4, 1048587, 65536, 4, 1114123, 65536, 4, 1179659, 65536, 4, 1245195, 65536, 4, 1310731, 65536, 4, 983052, 65536, 4, 1048588, 65536, 4, 1114124, 65536, 4, 1179660, 65536, 4, 1245196, 65536, 4, 1310732, 65536, 4, 983053, 65536, 4, 1048589, 65536, 4, 1114125, 65536, 4, 1179661, 65536, 4, 1245197, 65536, 4, 1310733, 65536, 4, 983054, 65536, 4, 1048590, 65536, 4, 1114126, 262144, 4, 1179662, 131072, 4, 1245198, 131072, 4, 1310734, 131072, 4, 983055, 65536, 4, 1048591, 65536, 4, 1114127, 65536, 5, 1179663, 196608, 2, 1245199, 196608, 2, 1310735, 196608, 2, 983056, 65536, 4, 1048592, 65536, 4, 1114128, 65536, 5, 1179664, 196608, 2, 1245200, 196608, 2, 1310736, 196608, 2, 983057, 65536, 4, 1048593, 65536, 4, 1114129, 196608, 4, 1179665, 0, 4, 1245201, 0, 4, 1310737, 0, 4, 983058, 65536, 4, 1048594, 65536, 4, 1114130, 65536, 4, 1179666, 65536, 4, 1245202, 65536, 4, 1310738, 65536, 4, 983059, 65536, 4, 1048595, 65536, 4, 1114131, 65536, 4, 1179667, 65536, 4, 1245203, 65536, 4, 1310739, 65536, 4, 983060, 65536, 4, 1048596, 65536, 4, 1114132, 65536, 4, 1179668, 65536, 4, 1245204, 65536, 4, 1310740, 65536, 4, 983061, 65536, 4, 1048597, 65536, 4, 1114133, 65536, 4, 1179669, 65536, 4, 1245205, 65536, 4, 1310741, 65536, 4, 983062, 65536, 4, 1048598, 65536, 4, 1114134, 65536, 4, 1179670, 65536, 4, 1245206, 65536, 4, 1310742, 65536, 4, 23, 65536, 4, 65559, 65536, 4, 131095, 65536, 4, 196631, 65536, 4, 262167, 65536, 4, 327703, 65536, 4, 393239, 65536, 4, 458775, 65536, 4, 524311, 65536, 4, 589847, 65536, 4, 655383, 65536, 4, 720919, 65536, 4, 786455, 65536, 4, 851991, 65536, 4, 917527, 65536, 4, 983063, 65536, 4, 1048599, 65536, 4, 1114135, 65536, 4, 1179671, 65536, 4, 1245207, 65536, 4, 1310743, 65536, 4, 24, 65536, 4, 65560, 65536, 4, 131096, 65536, 4, 196632, 65536, 4, 262168, 65536, 4, 327704, 65536, 4, 393240, 65536, 4, 458776, 65536, 4, 524312, 65536, 4, 589848, 65536, 4, 655384, 65536, 4, 720920, 65536, 4, 786456, 65536, 4, 851992, 65536, 4, 917528, 65536, 4, 983064, 65536, 4, 1048600, 65536, 4, 1114136, 65536, 4, 1179672, 65536, 4, 1245208, 65536, 4, 1310744, 65536, 4, 25, 65536, 4, 65561, 65536, 4, 131097, 65536, 4, 196633, 65536, 4, 262169, 65536, 4, 327705, 65536, 4, 393241, 65536, 4, 458777, 65536, 4, 524313, 65536, 4, 589849, 65536, 4, 655385, 65536, 4, 720921, 65536, 4, 786457, 65536, 4, 851993, 65536, 4, 917529, 65536, 4, 983065, 65536, 4, 1048601, 65536, 4, 1114137, 65536, 4, 1179673, 65536, 4, 1245209, 65536, 4, 1310745, 65536, 4, 26, 65536, 4, 65562, 65536, 4, 131098, 65536, 4, 196634, 65536, 4, 262170, 65536, 4, 327706, 65536, 4, 393242, 65536, 4, 458778, 65536, 4, 524314, 65536, 4, 589850, 65536, 4, 655386, 65536, 4, 720922, 65536, 4, 786458, 65536, 4, 851994, 65536, 4, 917530, 65536, 4, 983066, 65536, 4, 1048602, 65536, 4, 1114138, 65536, 4, 1179674, 65536, 4, 1245210, 65536, 4, 1310746, 65536, 4, 27, 65536, 4, 65563, 65536, 4, 131099, 65536, 4, 196635, 65536, 4, 262171, 65536, 4, 327707, 65536, 4, 393243, 65536, 4, 458779, 65536, 4, 524315, 65536, 4, 589851, 65536, 4, 655387, 65536, 4, 720923, 65536, 4, 786459, 65536, 4, 851995, 65536, 4, 917531, 65536, 4, 983067, 65536, 4, 1048603, 65536, 4, 1114139, 65536, 4, 1179675, 65536, 4, 1245211, 65536, 4, 1310747, 65536, 4, 28, 65536, 4, 65564, 65536, 4, 131100, 65536, 4, 196636, 65536, 4, 262172, 65536, 4, 327708, 65536, 4, 393244, 65536, 4, 458780, 65536, 4, 524316, 65536, 4, 589852, 65536, 4, 655388, 65536, 4, 720924, 65536, 4, 786460, 65536, 4, 851996, 65536, 4, 917532, 65536, 4, 983068, 65536, 4, 1048604, 65536, 4, 1114140, 65536, 4, 1179676, 65536, 4, 1245212, 65536, 4, 1310748, 65536, 4, 29, 65536, 4, 65565, 65536, 4, 131101, 65536, 4, 196637, 65536, 4, 262173, 65536, 4, 327709, 65536, 4, 393245, 65536, 4, 458781, 65536, 4, 524317, 65536, 4, 589853, 65536, 4, 655389, 65536, 4, 720925, 65536, 4, 786461, 65536, 4, 851997, 65536, 4, 917533, 65536, 4, 983069, 65536, 4, 1048605, 65536, 4, 1114141, 65536, 4, 1179677, 65536, 4, 1245213, 65536, 4, 1310749, 65536, 4)
layer_1/name = "Objects"
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Selector"
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_yb5u2")

[node name="boat" parent="MapViewContainer/MapView" instance=ExtResource("4_u5uiw")]
position = Vector2(224, 32)

[node name="UISide" parent="." instance=ExtResource("5_beqyk")]
offset = Vector2(960, 0)
transform = Transform2D(1, 0, 0, 1, 960, 0)

[node name="LevelCompleted" parent="." instance=ExtResource("6_k20oc")]
offset = Vector2(250, 250)
transform = Transform2D(1, 0, 0, 1, 250, 250)

[connection signal="level_completed" from="." to="LevelCompleted" method="_on_level_completed"]
[connection signal="target_reached" from="MapViewContainer/MapView/boat" to="." method="_on_boat_target_reached"]
